--- a/HelloWorldTest/CMakeLists.txt
+++ b/HelloWorldTest/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 project(helloWorldTest)
 
-add_executable(helloWorldTest helloWorldTest.cpp)
+add_executable(helloworldtest helloworldtest.cpp)
 #target_link_libraries(projectionSample realsense GL glfw)
 
-install(TARGETS helloWorldTest DESTINATION /usr/bin/)
+install(TARGETS helloworldtest DESTINATION /usr/bin/)
